# OrecchietTetris-artifact

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  commitlint.config.cjs  mypy.ini  package-lock.json  package.json  pyproject.toml  renovate.json
.github/workflows/: check.yml  deploy.yml
OrecchietTetris/: __init__.py  __main__.py  scripts.py
OrecchietTetris/gui/: TetrisGui.py  __init__.py
OrecchietTetris/model/: __init__.py  board.py  tetris.py  tetromino.py
OrecchietTetris/utils/: __init__.py  observer_subject.py
tests/: __init__.py
