[tool.poetry]
name = "template-python-project-poetry"
packages = [
    { include = "OrecchietTetris-artifact" },
]
version = "0.1.0"
description = "A template for Python projects, using Poetry"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
# update the Python versions in .github/workflows/check.yml if you change this
python = ">= 3.11.0 < 4.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.37.0"
poetry = "^1.8.3"
pytest = "^8.2.2"
flake8 = "^7.3.0"
pre-commit = "^4.5.1"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy OrecchietTetris tests"
compile = "python -m compileall OrecchietTetris tests"

[tool.poetry.scripts]
OrecchietTetris = "OrecchietTetris:main"
lint = "scripts:lint"
typecheck = "scripts:typecheck"
commitlint = "scripts:commitlint"
hooks = "scripts:install_hooks"
check = "scripts:check"
ci = "scripts:ci"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.mypy]
ignore_missing_imports = true
