[tool.poetry]
name = "OrecchietTetris"
packages = [
    { include = "OrecchietTetris" },
]
version = "0.1.0"
description = "Tetris with Apulian elements - a Software Engineering project."
authors = [
    "Mariagrazia Colonna <mariagrazia.colonna@studio.unibo.it>",
    "Mirko de Cillis <mirko.decillis@studio.unibo.it>",
    "Lorenza Pennisi <lorenza.pennisi@studio.unibo.it>",
]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/unibo-dtm-se-2425-OrecchietTetris/OrecchietTetris-artifact"
repository = "https://github.com/unibo-dtm-se-2425-OrecchietTetris/OrecchietTetris-artifact"
keywords = ["tetris", "game", "software engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
# update the Python versions in .github/workflows/check.yml if you change this
python = ">= 3.11.0 < 4.0.0"
python-i18n = "^0.3.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.37.0"
poetry = "^1.8.3"
pytest = "^8.2.2"
flake8 = "^7.3.0"
pre-commit = "^4.5.1"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy OrecchietTetris tests"
flake8 = "flake8 OrecchietTetris tests"
compile = "python -m compileall OrecchietTetris tests"
commitlint = "npx commitlint --from=HEAD~1 --to=HEAD"
hooks = "pre-commit install --hook-type commit-msg"

[tool.poetry.scripts]
OrecchietTetris = "OrecchietTetris:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.mypy]
ignore_missing_imports = true
